[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/Theme/new_theme-01.tres" type="Theme" id=1]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://assets/Screen/Lobby.gd" type="Script" id=5]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -56.0
margin_right = 192.0
margin_bottom = 56.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayNameLab" type="Label" parent="PlayPanel"]
margin_left = 16.0
margin_top = 16.0
margin_right = 66.0
margin_bottom = 46.0
text = "Name :"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerNameEdit" type="LineEdit" parent="PlayPanel"]
margin_left = 96.0
margin_top = 16.0
margin_right = 280.0
margin_bottom = 46.0
text = "Player"

[node name="HostBtn" type="Button" parent="PlayPanel"]
margin_left = 296.0
margin_top = 16.0
margin_right = 366.0
margin_bottom = 44.0
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IPLab" type="Label" parent="PlayPanel"]
margin_left = 16.0
margin_top = 64.0
margin_right = 57.0
margin_bottom = 92.0
text = "IP :"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IPEdit" type="LineEdit" parent="PlayPanel"]
margin_left = 96.0
margin_top = 64.0
margin_right = 280.0
margin_bottom = 94.0
text = "127.0.0.1"

[node name="JoinBtn" type="Button" parent="PlayPanel"]
margin_left = 296.0
margin_top = 64.0
margin_right = 366.0
margin_bottom = 92.0
text = "Join"

[node name="RoomPanel" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -256.0
margin_top = 128.0
margin_right = 256.0
margin_bottom = 392.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeaveBtn" type="Button" parent="RoomPanel"]
margin_left = 424.0
margin_top = 224.0
margin_right = 494.0
margin_bottom = 252.0
rect_pivot_offset = Vector2( -320, -64 )
text = "Leave"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReadyCheckBox" type="CheckBox" parent="RoomPanel"]
margin_left = 16.0
margin_top = 224.0
margin_right = 40.0
margin_bottom = 252.0
text = "Ready"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayBtn" type="Button" parent="RoomPanel"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 160.0
margin_top = -40.0
margin_right = 256.0
margin_bottom = -12.0
rect_pivot_offset = Vector2( -320, -64 )
disabled = true
toggle_mode = true
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerList" type="ItemList" parent="RoomPanel"]
margin_left = 16.0
margin_top = 16.0
margin_right = 256.0
margin_bottom = 211.0
items = [ "ไอเทม 0", ExtResource( 3 ), false, "ไอเทม 1", null, false, "ไอเทม 2", null, false, "ไอเทม 3", null, false, "ไอเทม 4", null, false, "ไอเทม 5", null, false, "ไอเทม 6", null, false ]

[node name="ModsButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -88.0
margin_top = 16.0
margin_right = -14.0
margin_bottom = 45.0
text = "Mods"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DecksBtn" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -88.0
margin_top = 56.0
margin_right = -14.0
margin_bottom = 85.0
text = "Decks"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateCardsBtn" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -88.0
margin_top = 96.0
margin_right = -14.0
margin_bottom = 125.0
text = "Cards"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="PlayPanel/HostBtn" to="." method="_on_HostBtn_pressed"]
[connection signal="pressed" from="PlayPanel/JoinBtn" to="." method="_on_JoinBtn_pressed"]
[connection signal="pressed" from="RoomPanel/LeaveBtn" to="." method="_on_LeaveBtn_pressed"]
[connection signal="pressed" from="RoomPanel/ReadyCheckBox" to="." method="_on_ReadyCheckBox_pressed"]
[connection signal="pressed" from="ModsButton" to="." method="_on_ModsButton_pressed"]
[connection signal="pressed" from="DecksBtn" to="." method="_on_DecksBtn_pressed"]
[connection signal="pressed" from="CreateCardsBtn" to="." method="_on_CreateCardsBtn_pressed"]
